fixed post file and comment modal spacing issues removed all consoles and print statements also removed xlsx format for error hadling

--- a/react-app/src/components/PostCommentModal/postcom.css
+++ b/react-app/src/components/PostCommentModal/postcom.css
@@ -5,6 +5,7 @@
     justify-content: center;
     width: 80%;
     margin: 0 auto;
+    padding-bottom: 20px;
   }
   
   .comment-form {
